--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <!--  
+  services-section
+         -->
     <section id="services-section">
       <div class="container">
         <div class="service-card demo">
@@ -24,6 +27,20 @@
           <div class="card-content"></div>
         </div>
         <div class="service-card branding">
+          <div class="card-content"></div>
+        </div>
+      </div>
+    </section>
+    <!--  
+  END - services-section
+         -->
+
+    <section id="planning-section">
+      <div class="container">
+        <div class="card">
+          <div class="card-content"></div>
+        </div>
+        <div class="card">
           <div class="card-content"></div>
         </div>
       </div>
