--- a/index.html
+++ b/index.html
@@ -6,9 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>responsive-layout by Hugo</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+      integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
 
   <body>
+    <header>
+      <div class="container">
+        <img src="assets/img/logo.png" alt="logo" class="logo" />
+
+        <div class="nav-elements">
+          <nav>
+            <ul>
+              <li><a href="">link</a></li>
+              <li><a href="">link</a></li>
+              <li><a href="">link</a></li>
+              <li><a href="">link</a></li>
+            </ul>
+          </nav>
+
+          <button>Get Started</button>
+        </div>
+        <i class="fa-solid fa-bars"></i>
+      </div>
+    </header>
+
     <!--  
   services-section
          -->
@@ -35,6 +62,10 @@
   END - services-section
          -->
 
+    <!--  
+  planning-section
+         -->
+
     <section id="planning-section">
       <div class="container">
         <div class="card">
@@ -45,5 +76,102 @@
         </div>
       </div>
     </section>
+    <!--  
+  END - planning-section
+         -->
+
+    <!--  
+  testimonials-section
+         -->
+
+    <section id="testimonials-section">
+      <div class="container">
+        <div class="card">
+          <div class="card-content">
+            <div class="picture"></div>
+            <div class="description"></div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-content">
+            <div class="picture"></div>
+            <div class="description"></div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-content">
+            <div class="picture"></div>
+            <div class="description"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--  
+    END - testimonials-section
+           -->
+
+    <!--  
+  benefits-section
+         -->
+    <section id="benefits-section">
+      <div class="container">
+        <div class="service-card">
+          <div class="card-content"></div>
+        </div>
+        <div class="service-card">
+          <div class="card-content"></div>
+        </div>
+        <div class="service-card">
+          <div class="card-content"></div>
+        </div>
+        <div class="service-card">
+          <div class="card-content"></div>
+        </div>
+        <div class="service-card">
+          <div class="card-content"></div>
+        </div>
+        <div class="service-card">
+          <div class="card-content"></div>
+        </div>
+      </div>
+    </section>
+    <!--  
+    END - benefits-section
+           -->
+
+    <!--  
+  about-section
+         -->
+
+    <section id="about-section">
+      <div class="container">
+        <div class="card">
+          <div class="card-content"></div>
+        </div>
+        <div class="card">
+          <div class="card-content"></div>
+        </div>
+      </div>
+    </section>
+    <!--  
+    END - about-section
+           -->
+
+    <!--  
+  footer-section
+         -->
+
+    <footer id="footer-section">
+      <div class="container">
+        <div class="cta"></div>
+        <div class="bottom-block"></div>
+      </div>
+    </footer>
+    <!--  
+      END - footer-section
+             -->
   </body>
 </html>
