--- a/index.html
+++ b/index.html
@@ -13,9 +13,19 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
+    <!--  
+  header-section
+         -->
     <header>
       <div class="container">
         <img src="assets/img/logo.png" alt="logo" class="logo" />
@@ -23,18 +33,21 @@
         <div class="nav-elements">
           <nav>
             <ul>
-              <li><a href="">link</a></li>
-              <li><a href="">link</a></li>
-              <li><a href="">link</a></li>
-              <li><a href="">link</a></li>
+              <li><a href="">Planning</a></li>
+              <li><a href="">Testimonials</a></li>
+              <li><a href="">Features</a></li>
+              <li><a href="">About us</a></li>
             </ul>
           </nav>
 
-          <button>Get Started</button>
+          <button class="btn-getstart-small">Get Started</button>
         </div>
         <i class="fa-solid fa-bars"></i>
       </div>
     </header>
+    <!--  
+  header-section
+         -->
 
     <!--  
   services-section
@@ -42,19 +55,62 @@
     <section id="services-section">
       <div class="container">
         <div class="service-card demo">
-          <div class="card-content"></div>
+          <div class="card-content">
+            <div>
+              <h1>Get a Demo Application</h1>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni
+                aspernatur tempora animi enim a numquam aperiam suscipit,
+              </p>
+              <button class="btn-appstore">&#63743; App Store</button>
+            </div>
+
+            <div class="img"></div>
+          </div>
         </div>
         <div class="service-card code">
-          <div class="card-content"></div>
+          <div class="card-content">
+            <i class="fa-solid fa-file-code"></i>
+            <h1>Clean Code</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+              distinctio inventore voluptatem perspiciatis dolores consequuntur
+              quae itaque earum.
+            </p>
+          </div>
         </div>
         <div class="service-card design">
-          <div class="card-content"></div>
+          <div class="card-content">
+            <i class="fa-solid fa-compass-drafting"></i>
+            <h1>Web Design</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+              distinctio inventore voluptatem perspiciatis dolores consequuntur
+              quae itaque earum.
+            </p>
+          </div>
         </div>
         <div class="service-card development">
-          <div class="card-content"></div>
+          <div class="card-content">
+            <i class="fa-solid fa-laptop-code"></i>
+            <h1>Development</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+              distinctio inventore voluptatem perspiciatis dolores consequuntur
+              quae itaque earum.
+            </p>
+          </div>
         </div>
         <div class="service-card branding">
-          <div class="card-content"></div>
+          <div class="card-content">
+            <i class="fa-solid fa-bullhorn"></i>
+            <h1>Branding</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+              distinctio inventore voluptatem perspiciatis dolores consequuntur
+              quae itaque earum.
+            </p>
+          </div>
         </div>
       </div>
     </section>
@@ -69,10 +125,32 @@
     <section id="planning-section">
       <div class="container">
         <div class="card">
-          <div class="card-content"></div>
+          <div class="card-content planning">
+            <img src="assets/img/planning1.png" alt="" />
+
+            <div>
+              <h1 class="pd-top-30px">Strategic Planning</h1>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+                nulla voluptatum natus maiores aliquid autem laudantium possimus
+                eaque necessitatibus, recusandae officia nesciunt odio eius vel
+                ullam. Cupiditate facilis quaerat nam?
+              </p>
+            </div>
+          </div>
         </div>
         <div class="card">
-          <div class="card-content"></div>
+          <div class="card-content development">
+            <img src="assets/img/planning2.png" alt="" />
+            <h1>App Development</h1>
+            <p class="italic">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+              nulla voluptatum natus maiores aliquid autem laudantium possimus
+              eaque necessitatibus, recusandae officia nesciunt odio eius vel
+              ullam. Cupiditate facilis quaerat nam?
+            </p>
+            <i class="fa-solid fa-circle-arrow-down"></i>
+          </div>
         </div>
       </div>
     </section>
@@ -86,24 +164,58 @@
 
     <section id="testimonials-section">
       <div class="container">
+        <h6>Testimonials</h6>
+        <h1 class="title-medium">We are commited expert partners</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+          voluptatem sit eius nisi eveniet consequatur, omnis, amet illo quidem
+          aut,
+        </p>
         <div class="card">
           <div class="card-content">
             <div class="picture"></div>
-            <div class="description"></div>
+            <div class="description">
+              <p>
+                <strong>"</strong>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+                minus incidunt libero delectus dolorum velit quo tempora
+                accusantium distinctio ducimus, aliquam molestiae.
+                <strong>"</strong>
+              </p>
+              <h3>John Doe</h3>
+            </div>
           </div>
         </div>
 
         <div class="card">
           <div class="card-content">
             <div class="picture"></div>
-            <div class="description"></div>
+            <div class="description">
+              <p>
+                <strong>"</strong>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+                minus incidunt libero delectus dolorum velit quo tempora
+                accusantium distinctio ducimus, aliquam molestiae.
+                <strong>"</strong>
+              </p>
+              <h3>John Doe</h3>
+            </div>
           </div>
         </div>
 
         <div class="card">
           <div class="card-content">
             <div class="picture"></div>
-            <div class="description"></div>
+            <div class="description">
+              <p>
+                <strong>"</strong>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+                minus incidunt libero delectus dolorum velit quo tempora
+                accusantium distinctio ducimus, aliquam molestiae.
+                <strong>"</strong>
+              </p>
+              <h3>John Doe</h3>
+            </div>
           </div>
         </div>
       </div>
@@ -117,24 +229,73 @@
   benefits-section
          -->
     <section id="benefits-section">
+      <h1>Benefit of working with us</h1>
       <div class="container">
         <div class="service-card">
-          <div class="card-content"></div>
+          <div class="card-content">
+            <h1>01</h1>
+            <h2>High Quality</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi non
+              veniam quibusdam corporis fugit. Nisi nihil minima
+            </p>
+            <button class="btn-purple">more</button>
+          </div>
         </div>
         <div class="service-card">
-          <div class="card-content"></div>
+          <div class="card-content">
+            <h1>01</h1>
+            <h2>High Quality</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi non
+              veniam quibusdam corporis fugit. Nisi nihil minima
+            </p>
+            <button class="btn-purple">more</button>
+          </div>
         </div>
         <div class="service-card">
-          <div class="card-content"></div>
+          <div class="card-content">
+            <h1>01</h1>
+            <h2>High Quality</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi non
+              veniam quibusdam corporis fugit. Nisi nihil minima
+            </p>
+            <button class="btn-purple">more</button>
+          </div>
         </div>
         <div class="service-card">
-          <div class="card-content"></div>
+          <div class="card-content">
+            <h1>01</h1>
+            <h2>High Quality</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi non
+              veniam quibusdam corporis fugit. Nisi nihil minima
+            </p>
+            <button class="btn-purple">more</button>
+          </div>
         </div>
         <div class="service-card">
-          <div class="card-content"></div>
+          <div class="card-content">
+            <h1>01</h1>
+            <h2>High Quality</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi non
+              veniam quibusdam corporis fugit. Nisi nihil minima
+            </p>
+            <button class="btn-purple">more</button>
+          </div>
         </div>
         <div class="service-card">
-          <div class="card-content"></div>
+          <div class="card-content">
+            <h1>01</h1>
+            <h2>High Quality</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi non
+              veniam quibusdam corporis fugit. Nisi nihil minima
+            </p>
+            <button class="btn-purple">more</button>
+          </div>
         </div>
       </div>
     </section>
@@ -148,11 +309,44 @@
 
     <section id="about-section">
       <div class="container">
-        <div class="card">
-          <div class="card-content"></div>
+        <div class="card-about">
+          <div class="card-content">
+            <h1>About Us</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum enim veniam aperiam illum cum distinctio laudantium.
+              Deserunt ipsa, sequi itaque, quam laudantium eveniet, fugit
+              similique illum laborum mollitia dolore ipsam? Lorem ipsum dolor
+              sit amet consectetur adipisicing elit. Voluptatum enim veniam
+              aperiam illum cum distinctio laudantium. Deserunt ipsa, sequi
+              itaque, quam laudantium eveniet, fugit similique illum laborum
+              mollitia dolore ipsam?
+            </p>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum enim veniam aperiam illum cum distinctio laudantium.
+              Deserunt ipsa, sequi itaque, quam laudantium eveniet, fugit
+              similique illum laborum mollitia dolore ipsam?
+            </p>
+          </div>
         </div>
-        <div class="card">
-          <div class="card-content"></div>
+
+        <div class="card-picture">
+          <div class="card-content quote">
+            <div class="picture">
+              <i class="fa-solid fa-quote-left"></i>
+            </div>
+
+            <h3>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Distinctio nam veritatis.
+            </h3>
+
+            <a href=""
+              ><i class="fa-brands fa-linkedin"></i> Find me on linkedin</a
+            >
+          </div>
         </div>
       </div>
     </section>
@@ -166,8 +360,32 @@
 
     <footer id="footer-section">
       <div class="container">
-        <div class="cta"></div>
-        <div class="bottom-block"></div>
+        <div class="cta">
+          <h6>Testimonials</h6>
+          <h1>Simple transparent pricing</h1>
+          <h2>It's Free!</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+            voluptatem sit eius nisi eveniet consequatur, omnis, amet illo
+            quidem aut, reiciendis fugit natus necessitatibus exercitationem
+            quam laboriosam nulla nostrum velit.
+          </p>
+          <button class="btn-big">Get Started</button>
+          <h5>copyright 2021 - classe xx - privacy policy</h5>
+        </div>
+      </div>
+      <div class="bottom-block">
+        <div class="container">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Dignissimos laudantium nisi voluptatem voluptate praesentium,
+          </p>
+
+          <p>
+            <a>Lorem ipsum</a> dolor, sit amet consectetur
+            <a>Boolean Careers</a>.
+          </p>
+        </div>
       </div>
     </footer>
     <!--  
